Tests/CompilerTests/negative/no-conversion.expected
negative/no-conversion.hylo:4.7-9: error: no conversion from 'Void' to '{Void, Void}'
  _ = () as {Void, Void}
      ~~
